--- a/estudos/html-css/desafios/dsf004/style/style.css
+++ b/estudos/html-css/desafios/dsf004/style/style.css
@@ -40,9 +40,29 @@ header > h1 {
     font-family: var(--fonte-destaque);
 }
 
+main {
+    min-width: 300px;
+    max-width: 1000px;
+    margin: auto;
+    margin-bottom: 30px;
+    background-color: white;
+    padding: 20px;
+    box-shadow: 0px 0px 0px 10px rgba(0, 0, 0, 0.418);
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
 main > h1 {
-    color: white;
+    color: var(--cor5);
     font-family: var(--fonte-android);
+}
+
+main > h2 {
+    font-family: var(--fonte-android);
+}
+
+main > img {
+    width: 100%;
 }
 
 header > p {
@@ -59,6 +79,16 @@ main {
 
 main > h2 {
     font-family: var(--fonte-android);
+}
+
+main > img {
+    width: 100%;
+}
+
+main img.pequena {
+    display: block;
+    margin: auto;
+    width: 50%;
 }
 
 footer {
